apps/k8s/base/runner/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: runner
  template:
    metadata:
      labels:
        app: runner
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: runner
          image: runner-image
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /status
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
