apps/k8s/base/runner/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: runner
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: runner
